include(loggerTaskLib)
ADD_LIBRARY(${LOGGER_TASKLIB_NAME} SHARED 
    ${LOGGER_TASKLIB_SOURCES}
    Logfile.cpp)

TARGET_LINK_LIBRARIES(${LOGGER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${LOGGER_TASKLIB_DEPENDENT_LIBRARIES})

INSTALL(TARGETS ${LOGGER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${LOGGER_TASKLIB_HEADERS}
    DESTINATION include/orocos/logger)

