include(loggerTaskLib)
include_directories(${CMAKE_SOURCE_DIR}/.orogen/tasks)
ADD_LIBRARY(${LOGGER_TASKLIB_NAME} SHARED 
    ${LOGGER_TASKLIB_SOURCES}
    Logfile.cpp
    ${CMAKE_SOURCE_DIR}/.orogen/tasks/TypelibMarshallerBase.cpp)

TARGET_LINK_LIBRARIES(${LOGGER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${LOGGER_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${LOGGER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${LOGGER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${LOGGER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${LOGGER_TASKLIB_HEADERS}
    DESTINATION include/orocos/logger)

